force-app/main/default/objects/Case/fields/AbnormalReading__c.field-meta.xml
<CustomField>
    <fullName>AbnormalReading__c</fullName>
    <label>Lettura Anomala</label>
    <length>255</length>
    <type>Text</type>
</CustomField>