force-app/main/default/objects/Case/fields/AbnormalReadingDate__c.field-meta.xml
<CustomField>
    <fullName>AbnormalReadingDate__c</fullName>
    <label>Data Lettura Anomala</label>
    <type>Date</type>
</CustomField>