force-app/main/default/objects/Case/fields/AccountClass__c.field-meta.xml
<CustomField>
    <fullName>AccountClass__c</fullName>
    <label>Classe Conto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_CategoryTypeClient</valueSetName>
    </valueSet>
</CustomField>