force-app/main/default/objects/Case/fields/AccountClassCode__c.field-meta.xml
<CustomField>
    <fullName>AccountClassCode__c</fullName>
    <formula>CASE(AccountClass__c,
				&quot;Famiglie&quot;, &quot;Z001&quot;,
				&quot;Aziende Soho&quot;, &quot;Z002&quot;,
				&quot;Aziende SME&quot;, &quot;Z003&quot;,
				&quot;Enti&quot;, &quot;Z004&quot;,
				&quot;Grandi Condomini&quot;, &quot;Z005&quot;,
				&quot;Intercompany&quot;,&quot;Z006&quot;,
				&quot;Salvaguardia Aziende&quot;,&quot;Z007&quot;,
				&quot;Salvaguardia Enti&quot;,&quot;Z009&quot;,
				&quot;Aziende TOP&quot;,&quot;Z010&quot;,
				&quot;Piccoli Condomini&quot;,&quot;Z011&quot;,
				&quot;Societa Vendita Terze&quot;,&quot;Z012&quot;,
				&quot;Default gas&quot;,&quot;Z013&quot;,
				&quot;Comuni Territorio&quot;,&quot;Z016&quot;,
				&quot;FUI domestico&quot;,&quot;Z019&quot;,
				&quot;FUI non domestico&quot;,&quot;Z020&quot;,
				null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codice Classe Conto</label>
    <type>Text</type>
</CustomField>