force-app/main/default/objects/Case/fields/AccountCode__c.field-meta.xml
<CustomField>
    <fullName>AccountCode__c</fullName>
    <formula>Account.CustomerCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codice Account</label>
    <type>Text</type>
</CustomField>