force-app/main/default/objects/Case/fields/AccountFiscalCodeFormula__c.field-meta.xml
<CustomField>
    <fullName>AccountFiscalCodeFormula__c</fullName>
    <formula>Account.FiscalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codice Fiscale</label>
    <type>Text</type>
</CustomField>