force-app/main/default/objects/Case/fields/AccountholderTypeBeneficiary__c.field-meta.xml
<CustomField>
    <fullName>AccountholderTypeBeneficiary__c</fullName>
    <label>Tipologia Intestatario/Beneficiario</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetName>AccountholderTypeBeneficiary</valueSetName>
    </valueSet>
</CustomField>