force-app/main/default/objects/Case/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo di tracciamento per identificare l&apos;Activity responsabile della creazione del record.</description>
    <label>Attività</label>
    <referenceTo>wrts_prcgvr__Activity__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>