force-app/main/default/objects/Case/fields/ActivityCode__c.field-meta.xml
<CustomField>
    <fullName>ActivityCode__c</fullName>
    <label>Codice Attività</label>
    <length>255</length>
    <type>Text</type>
</CustomField>