force-app/main/default/objects/Case/fields/AdditionalAttachments__c.field-meta.xml
<CustomField>
    <fullName>AdditionalAttachments__c</fullName>
    <label>Allegati aggiuntivi</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>