force-app/main/default/objects/Case/fields/AgencyBranchPostOffice__c.field-meta.xml
<CustomField>
    <fullName>AgencyBranchPostOffice__c</fullName>
    <description>Agenzia/Filiale/Ufficio postale</description>
    <label>Agenzia/Filiale/Ufficio postale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>