force-app/main/default/objects/Case/fields/AlertType__c.field-meta.xml
<CustomField>
    <fullName>AlertType__c</fullName>
    <description>Tipologia Alert oggetto della modifica.</description>
    <label>Tipologia Alert</label>
    <length>100</length>
    <type>Text</type>
</CustomField>