force-app/main/default/objects/Case/fields/AlternativeAddress__c.field-meta.xml
<CustomField>
    <fullName>AlternativeAddress__c</fullName>
    <description>Campo che permette all&apos;operatore di inserire un indirizzo alternativo a quello ereditato dal sistema</description>
    <label>Indirizzo residenza/sede legale/recapito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>