force-app/main/default/objects/Case/fields/AmountToPayInInstallments__c.field-meta.xml
<CustomField>
    <fullName>AmountToPayInInstallments__c</fullName>
    <label>Importo Da Rateizzare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>