force-app/main/default/objects/Case/fields/AnnualConsumption__c.field-meta.xml
<CustomField>
    <fullName>AnnualConsumption__c</fullName>
    <description>Indica il consumo annuo elettrico</description>
    <label>Consumo Annuo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>