force-app/main/default/objects/Case/fields/ApplicationInterests__c.field-meta.xml
<CustomField>
    <fullName>ApplicationInterests__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Applicazioni Interessi</description>
    <label>Applicazioni Interessi</label>
    <type>Checkbox</type>
</CustomField>