force-app/main/default/objects/Case/fields/AssociatedServiceRequest__c.field-meta.xml
<CustomField>
    <fullName>AssociatedServiceRequest__c</fullName>
    <label>Richiesta di servizio associata</label>
    <length>255</length>
    <type>Text</type>
</CustomField>