force-app/main/default/objects/Case/fields/AtecoCode__c.field-meta.xml
<CustomField>
    <fullName>AtecoCode__c</fullName>
    <description>Combinazione alfanumerica che identifica una ATtività ECOnomica</description>
    <label>Codice Ateco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>