force-app/main/default/objects/Case/fields/AttachmentManagement__c.field-meta.xml
<CustomField>
    <fullName>AttachmentManagement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Output dell&apos;interrogazione dell&apos;oggetto RentProcessRule tracciato sul Case</description>
    <label>Gestione Allegati</label>
    <type>Checkbox</type>
</CustomField>