force-app/main/default/objects/Case/fields/BankAccountSignatoryFirstName__c.field-meta.xml
<CustomField>
    <fullName>BankAccountSignatoryFirstName__c</fullName>
    <description>Nome intestatario c/c</description>
    <label>Nome intestatario c/c</label>
    <length>60</length>
    <type>Text</type>
</CustomField>