force-app/main/default/objects/Case/fields/BeneficiaryAccount__c.field-meta.xml
<CustomField>
    <fullName>BeneficiaryAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Erede/Beneficiario</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Account Erede/Beneficiario)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>