force-app/main/default/objects/Case/fields/BeneficiaryPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>BeneficiaryPhoneNumber__c</fullName>
    <label>Recapito erede/beneficiario alternativo</label>
    <type>Phone</type>
</CustomField>