force-app/main/default/objects/Case/fields/BillingCategory__c.field-meta.xml
<CustomField>
    <fullName>BillingCategory__c</fullName>
    <label>Categoria Billing</label>
    <length>1</length>
    <type>Text</type>
</CustomField>