force-app/main/default/objects/Case/fields/BillingCity__c.field-meta.xml
<CustomField>
    <fullName>BillingCity__c</fullName>
    <description>Componente Indirizzo di residenza/sede legale</description>
    <label>Comune [Residenziale/Sede Legale]</label>
    <length>40</length>
    <type>Text</type>
</CustomField>