force-app/main/default/objects/Case/fields/BillingCityCode__c.field-meta.xml
<CustomField>
    <fullName>BillingCityCode__c</fullName>
    <description>Componente Indirizzo di residenza/sede legale</description>
    <label>Codice ISTAT [Residenziale/Sede Legale]</label>
    <length>6</length>
    <type>Text</type>
</CustomField>