force-app/main/default/objects/Case/fields/BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>BillingCountry__c</fullName>
    <description>Componente Indirizzo di residenza/sede legale</description>
    <label>Stato [Residenziale/Sede Legale]</label>
    <length>80</length>
    <type>Text</type>
</CustomField>