force-app/main/default/objects/Case/fields/BillingFrequency__c.field-meta.xml
<CustomField>
    <fullName>BillingFrequency__c</fullName>
    <description>Periodicità Fatturazione per processo &quot;Ritorno a Fatt. Bimestrale/Mensile&quot;</description>
    <label>Periodicità Fatturazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mensile</fullName>
            </value>
            <value>
                <fullName>Bimestrale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>