force-app/main/default/objects/Case/fields/BillingPlace__c.field-meta.xml
<CustomField>
    <fullName>BillingPlace__c</fullName>
    <description>Componente Indirizzo di residenza/sede legale</description>
    <label>Località [Residenziale/Sede Legale]</label>
    <length>50</length>
    <type>Text</type>
</CustomField>