force-app/main/default/objects/Case/fields/BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>BillingPostalCode__c</fullName>
    <description>Componente Indirizzo di residenza/sede legale</description>
    <label>CAP [Residenziale/Sede Legale]</label>
    <length>20</length>
    <type>Text</type>
</CustomField>