force-app/main/default/objects/Case/fields/BillingProblem__c.field-meta.xml
<CustomField>
    <fullName>BillingProblem__c</fullName>
    <label>Problemi di fatturazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YesNo</valueSetName>
    </valueSet>
</CustomField>