force-app/main/default/objects/Case/fields/BillingProfile__c.field-meta.xml
<CustomField>
    <fullName>BillingProfile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Profile</label>
    <referenceTo>BillingProfile__c</referenceTo>
    <relationshipLabel>Casi</relationshipLabel>
    <relationshipName>Casi</relationshipName>
    <type>Lookup</type>
</CustomField>