force-app/main/default/objects/Case/fields/BillingProvince__c.field-meta.xml
<CustomField>
    <fullName>BillingProvince__c</fullName>
    <description>Componente Indirizzo di residenza/sede legale</description>
    <label>Provincia [Residenziale/Sede Legale]</label>
    <length>80</length>
    <type>Text</type>
</CustomField>