force-app/main/default/objects/Case/fields/BillingStreetCode__c.field-meta.xml
<CustomField>
    <fullName>BillingStreetCode__c</fullName>
    <description>Componente Indirizzo di residenza/sede legale</description>
    <label>Codice Via Stradario SAP [Residenziale/S</label>
    <length>30</length>
    <type>Text</type>
</CustomField>