force-app/main/default/objects/Case/fields/BillingStreetName__c.field-meta.xml
<CustomField>
    <fullName>BillingStreetName__c</fullName>
    <description>Componente Indirizzo di residenza/sede legale</description>
    <label>Nome Via [Residenziale/Sede Legale]</label>
    <length>200</length>
    <type>Text</type>
</CustomField>