force-app/main/default/objects/Case/fields/BillingStreetNumber__c.field-meta.xml
<CustomField>
    <fullName>BillingStreetNumber__c</fullName>
    <description>Componente Indirizzo di residenza/sede legale</description>
    <label>Civico [Residenziale/Sede Legale]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>