force-app/main/default/objects/Case/fields/BillingStreetNumberExtension__c.field-meta.xml
<CustomField>
    <fullName>BillingStreetNumberExtension__c</fullName>
    <description>Componente Indirizzo di residenza/sede legale</description>
    <label>Estens.Civico [Residenziale/Sede Legale]</label>
    <length>15</length>
    <type>Text</type>
</CustomField>