force-app/main/default/objects/Case/fields/BillNumber__c.field-meta.xml
<CustomField>
    <fullName>BillNumber__c</fullName>
    <description>Numero Fattura</description>
    <label>Numero Fattura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>