force-app/main/default/objects/Case/fields/BillSendingMethod__c.field-meta.xml
<CustomField>
    <fullName>BillSendingMethod__c</fullName>
    <description>Nuova modalità invio bolletta per sotto-processo Modifica Dati di Recapito</description>
    <label>Modalità invio bolletta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_BillSendingMethod</valueSetName>
    </valueSet>
</CustomField>