force-app/main/default/objects/Case/fields/Birthcity__c.field-meta.xml
<CustomField>
    <fullName>Birthcity__c</fullName>
    <label>Luogo di nascita</label>
    <length>255</length>
    <type>Text</type>
</CustomField>