force-app/main/default/objects/Case/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <label>Data di nascita</label>
    <type>Date</type>
</CustomField>