force-app/main/default/objects/Case/fields/BlockType__c.field-meta.xml
<CustomField>
    <fullName>BlockType__c</fullName>
    <description>Tipo Blocco</description>
    <label>Tipo Blocco</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Partite da chiarire/fatture errate o contestate</fullName>
            </value>
            <value>
                <fullName>W - Verifica metrologica contatore in corso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>