force-app/main/default/objects/Case/fields/CAEmail__c.field-meta.xml
<CustomField>
    <fullName>CAEmail__c</fullName>
    <label>Indirizzo/email CA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>