force-app/main/default/objects/Case/fields/CalculationBlock__c.field-meta.xml
<CustomField>
    <fullName>CalculationBlock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blocco al Calcolo</label>
    <type>Checkbox</type>
</CustomField>