force-app/main/default/objects/Case/fields/Caliber__c.field-meta.xml
<CustomField>
    <fullName>Caliber__c</fullName>
    <description>Calibro</description>
    <label>Calibro</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Commodity__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>HDT_Caliber</valueSetName>
    </valueSet>
</CustomField>