force-app/main/default/objects/Case/fields/CaliberAvailable__c.field-meta.xml
<CustomField>
    <fullName>CaliberAvailable__c</fullName>
    <description>Calibro</description>
    <label>Classe contatore disponibile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_Caliber</valueSetName>
    </valueSet>
</CustomField>