force-app/main/default/objects/Case/fields/CancellationHerokuPracticeCode__c.field-meta.xml
<CustomField>
    <fullName>CancellationHerokuPracticeCode__c</fullName>
    <label>Annullamento - Codice Pratica Heroku</label>
    <length>255</length>
    <type>Text</type>
</CustomField>