force-app/main/default/objects/Case/fields/CancellationNote__c.field-meta.xml
<CustomField>
    <fullName>CancellationNote__c</fullName>
    <description>Note Anullamento</description>
    <label>Note Annullamento</label>
    <type>TextArea</type>
</CustomField>