force-app/main/default/objects/Case/fields/CancellationReason__c.field-meta.xml
<CustomField>
    <fullName>CancellationReason__c</fullName>
    <description>Indica la motivazione per cui si sta innescondo un processo del cluster Annullamento</description>
    <label>Motivazione Annullamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_CancellationReason</valueSetName>
    </valueSet>
</CustomField>