force-app/main/default/objects/Case/fields/CancellationReasonDescription__c.field-meta.xml
<CustomField>
    <fullName>CancellationReasonDescription__c</fullName>
    <description>Calcolata a partire dal campo ProcessCancellationReason__c, indica la causale Normata da inviare nella comunicazione con i sistemi a valle</description>
    <label>Descrizione Causale Annullamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_CancellationReasonDescription</valueSetName>
    </valueSet>
</CustomField>