force-app/main/default/objects/Case/fields/CareOf__c.field-meta.xml
<CustomField>
    <fullName>CareOf__c</fullName>
    <description>Nuovo Cognome e Nome del destinatario divergente</description>
    <label>Presso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>