force-app/main/default/objects/Case/fields/CartographyDetail__c.field-meta.xml
<CustomField>
    <fullName>CartographyDetail__c</fullName>
    <label>Dettaglio Cartografia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>