force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CustomerMarking__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>HDT_CategoryTypeClient</valueSetName>
    </valueSet>
</CustomField>