force-app/main/default/objects/Case/fields/Causal__c.field-meta.xml
<CustomField>
    <fullName>Causal__c</fullName>
    <label>Causale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>