force-app/main/default/objects/Case/fields/CausalCode__c.field-meta.xml
<CustomField>
    <fullName>CausalCode__c</fullName>
    <description>Output dell&apos;interrogazione dell&apos;oggetto QuoteManagement__c tracciato sul Case</description>
    <label>Codice Causale</label>
    <length>5</length>
    <type>Text</type>
</CustomField>