force-app/main/default/objects/Case/fields/CemeteryName__c.field-meta.xml
<CustomField>
    <fullName>CemeteryName__c</fullName>
    <description>Campo utilizzato per Votive Modena</description>
    <label>Nome cimitero</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Albareto Vecchio</fullName>
            </value>
            <value>
                <fullName>Albareto Nuovo</fullName>
            </value>
            <value>
                <fullName>Baggiovara Nuovo</fullName>
            </value>
            <value>
                <fullName>Baggiovara Vecchio</fullName>
            </value>
            <value>
                <fullName>Cittanova</fullName>
            </value>
            <value>
                <fullName>Collegara</fullName>
            </value>
            <value>
                <fullName>Freto</fullName>
            </value>
            <value>
                <fullName>Ganaceto</fullName>
            </value>
            <value>
                <fullName>Lesignana</fullName>
            </value>
            <value>
                <fullName>Marzaglia</fullName>
            </value>
            <value>
                <fullName>Portile</fullName>
            </value>
            <value>
                <fullName>Saliceto Panaro</fullName>
            </value>
            <value>
                <fullName>San Cataldo</fullName>
            </value>
            <value>
                <fullName>San Cesario sul Panaro</fullName>
            </value>
            <value>
                <fullName>San Donnino</fullName>
            </value>
            <value>
                <fullName>San Matteo</fullName>
            </value>
            <value>
                <fullName>Santa Maria di Mugnano</fullName>
            </value>
            <value>
                <fullName>Villanova</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>