force-app/main/default/objects/Case/fields/CertifiedEmail__c.field-meta.xml
<CustomField>
    <fullName>CertifiedEmail__c</fullName>
    <description>Nuova PEC per sotto-processo Modifica Dati di contatto</description>
    <label>PEC</label>
    <type>Email</type>
</CustomField>