force-app/main/default/objects/Case/fields/ChannelOfPayment__c.field-meta.xml
<CustomField>
    <fullName>ChannelOfPayment__c</fullName>
    <description>Canale di pagamento </description>
    <label>Canale di pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATM</fullName>
            </value>
            <value>
                <fullName>Banca BONIFICO</fullName>
            </value>
            <value>
                <fullName>Banca SPORTELLO</fullName>
            </value>
            <value>
                <fullName>Bollettino postale</fullName>
            </value>
            <value>
                <fullName>Carta di credito online</fullName>
            </value>
            <value>
                <fullName>Cassa COOP</fullName>
            </value>
            <value>
                <fullName>POS Sportello</fullName>
            </value>
            <value>
                <fullName>Posta</fullName>
            </value>
            <value>
                <fullName>Ricevitoria</fullName>
            </value>
            <value>
                <fullName>RID</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>