force-app/main/default/objects/Case/fields/CityOrInstitution__c.field-meta.xml
<CustomField>
    <fullName>CityOrInstitution__c</fullName>
    <label>Comune/Ente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>