force-app/main/default/objects/Case/fields/ClientType__c.field-meta.xml
<CustomField>
    <fullName>ClientType__c</fullName>
    <label>Tipo Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alberghi Bar Ristoranti</fullName>
            </value>
            <value>
                <fullName>Bagnini</fullName>
            </value>
            <value>
                <fullName>Cliente privato in suolo privato</fullName>
            </value>
            <value>
                <fullName>Cliente privato in suolo pubblico</fullName>
            </value>
            <value>
                <fullName>Ditte</fullName>
            </value>
            <value>
                <fullName>Enti Associazioni</fullName>
            </value>
            <value>
                <fullName>Scuole</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>