force-app/main/default/objects/Case/fields/ClientTypology__c.field-meta.xml
<CustomField>
    <fullName>ClientTypology__c</fullName>
    <label>Tipologia Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestico</fullName>
            </value>
            <value>
                <fullName>Non Domestico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>