force-app/main/default/objects/Case/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <description>Nome del Cluster a cui appartiene un processo.</description>
    <label>Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annullamento</fullName>
            </value>
            <value>
                <fullName>Canone Rai</fullName>
            </value>
            <value>
                <fullName>Disattivazioni</fullName>
            </value>
            <value>
                <fullName>Fatturazione</fullName>
            </value>
            <value>
                <fullName>Modifiche Anagrafiche</fullName>
            </value>
            <value>
                <fullName>Notifiche</fullName>
            </value>
            <value>
                <fullName>Pagamenti</fullName>
            </value>
            <value>
                <fullName>Preventivi</fullName>
            </value>
            <value>
                <fullName>Verifiche</fullName>
            </value>
            <value>
                <fullName>Voltura</fullName>
            </value>
            <value>
                <fullName>Reclami</fullName>
            </value>
            <value>
                <fullName>Autolettura</fullName>
            </value>
            <value>
                <fullName>Informative</fullName>
            </value>
            <value>
                <fullName>Morosità</fullName>
            </value>
            <value>
                <fullName>Variazioni</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>