force-app/main/default/objects/Case/fields/CodeBlock__c.field-meta.xml
<CustomField>
    <fullName>CodeBlock__c</fullName>
    <label>Codice Blocco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>