force-app/main/default/objects/Case/fields/CohabitantsNumber__c.field-meta.xml
<CustomField>
    <fullName>CohabitantsNumber__c</fullName>
    <label>Numero coabitanti</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>