force-app/main/default/objects/Case/fields/Cohabitation__c.field-meta.xml
<CustomField>
    <fullName>Cohabitation__c</fullName>
    <label>Coabitazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>