force-app/main/default/objects/Case/fields/CommercialHousingUnit__c.field-meta.xml
<CustomField>
    <fullName>CommercialHousingUnit__c</fullName>
    <label>Unità abitative uso artigianale/commerci</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>