force-app/main/default/objects/Case/fields/CommercialProductVersion__c.field-meta.xml
<CustomField>
    <fullName>CommercialProductVersion__c</fullName>
    <label>Versione Prodotto Commerciale</label>
    <length>80</length>
    <type>Text</type>
</CustomField>