force-app/main/default/objects/Case/fields/CommodityFormula__c.field-meta.xml
<CustomField>
    <fullName>CommodityFormula__c</fullName>
    <description>Settore merceologico preso in Lookup dal Service Point</description>
    <formula>IF(TEXT(ServicePoint__r.CommoditySector__c) != &apos;&apos;,TEXT(ServicePoint__r.CommoditySector__c), TEXT(Commodity__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Servizio</label>
    <type>Text</type>
</CustomField>