force-app/main/default/objects/Case/fields/ComparePaidToPay__c.field-meta.xml
<CustomField>
    <fullName>ComparePaidToPay__c</fullName>
    <description>Confronto Pagato- Da pagare</description>
    <label>Confronto Pagato- Da pagare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>