force-app/main/default/objects/Case/fields/CompetentOffice__c.field-meta.xml
<CustomField>
    <fullName>CompetentOffice__c</fullName>
    <description>L&apos;ufficio competente inerente il case in oggetto</description>
    <label>Ufficio competente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HCM</fullName>
            </value>
            <value>
                <fullName>Marche Multiservizi Spa</fullName>
            </value>
            <value>
                <fullName>Mercato Aziende</fullName>
            </value>
            <value>
                <fullName>Mercato Aziende In</fullName>
            </value>
            <value>
                <fullName>Mercato Aziende Out</fullName>
            </value>
            <value>
                <fullName>Mercato Famiglie</fullName>
            </value>
            <value>
                <fullName>Procedure Concorsuali</fullName>
            </value>
            <value>
                <fullName>Marche Multiservizi SpaMercato</fullName>
            </value>
            <value>
                <fullName>AziendeMercato aziende InMercato</fullName>
            </value>
            <value>
                <fullName>Aziende outMercato</fullName>
            </value>
            <value>
                <fullName>FamiglieProcedure Concorsuali</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>