force-app/main/default/objects/Case/fields/ComplaintEndDate__c.field-meta.xml
<CustomField>
    <fullName>ComplaintEndDate__c</fullName>
    <formula>IF(OR(ISPICKVAL(FirstLevelComplaintClassification__c, &quot;Reclamo Scritto&quot;),ISPICKVAL(FirstLevelComplaintClassification__c, &quot;Richiesta di informazioni&quot;)), SendDate__c + 30, SendDate__c + 20)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Scadenza Reclamo</label>
    <type>Date</type>
</CustomField>